force-app/main/default/objects/HistoryAccount__c/HistoryAccount__c.object-meta.xml
<CustomObject>
    <label>Historique de compte</label>
    <nameField>
        <label>Nom de Historique de compte</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Historique de comptes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>