force-app/main/default/objects/HistoryAccount__c/fields/EffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>EffectiveDate__c</fullName>
    <label>Date d&#39;application</label>
    <required>true</required>
    <type>Date</type>
</CustomField>