force-app/main/default/objects/HistoryAccount__c/fields/Entreprise__c.field-meta.xml
<CustomField>
    <fullName>Entreprise__c</fullName>
    <label>Entreprise</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Historique de comptes</relationshipLabel>
    <relationshipName>Historique_de_comptes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>