force-app/main/default/objects/HistoryAccount__c/fields/Field__c.field-meta.xml
<CustomField>
    <fullName>Field__c</fullName>
    <label>Champ</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Name</fullName>
            </value>
            <value>
                <fullName>Siret__c</fullName>
            </value>
            <value>
                <fullName>ActivityStartDate__c</fullName>
            </value>
            <value>
                <fullName>BillingCity</fullName>
            </value>
            <value>
                <fullName>BillingStreet</fullName>
            </value>
            <value>
                <fullName>BillingCountry</fullName>
            </value>
            <value>
                <fullName>BillingPostalCode</fullName>
            </value>
            <value>
                <fullName>JobStartDate__c</fullName>
            </value>
            <value>
                <fullName>VatLimitDate__c</fullName>
            </value>
            <value>
                <fullName>LegalStatus__c</fullName>
            </value>
            <value>
                <fullName>OwnerId</fullName>
            </value>
            <value>
                <fullName>nbOfShares__c</fullName>
            </value>
            <value>
                <fullName>CommercialName__c</fullName>
            </value>
            <value>
                <fullName>TaxSystem__c</fullName>
            </value>
            <value>
                <fullName>VatSystem__c</fullName>
            </value>
            <value>
                <fullName>TaxingType__c</fullName>
            </value>
            <value>
                <fullName>RcsCity__c</fullName>
            </value>
            <value>
                <fullName>Team__c</fullName>
            </value>
            <value>
                <fullName>Status__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>