force-app/main/default/objects/HistoryAccount__c/fields/NewValue__c.field-meta.xml
<CustomField>
    <fullName>NewValue__c</fullName>
    <label>Nouvelle valeur</label>
    <length>255</length>
    <type>Text</type>
</CustomField>