force-app/main/default/objects/HistoryAccount__c/fields/OldValue__c.field-meta.xml
<CustomField>
    <fullName>OldValue__c</fullName>
    <label>Ancienne valeur</label>
    <length>255</length>
    <type>Text</type>
</CustomField>